--- a/src/assets/components/PricingCard/PricingCard.module.css
+++ b/src/assets/components/PricingCard/PricingCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: 250px;
+  max-width: 280px;
   background-color: white;
   border: 1px solid black;
   border-radius: 5px;
@@ -31,13 +31,30 @@
   font-size: 1.3rem;
   color: var(--price-theme);
   font-family: Poppins;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #f3f1f1;
+}
+
+.card__benefits {
+  color: black;
+  padding-left: 20px;
+  font-size: 0.7rem;
 }
 
 .card__benefits-label {
   color: var(--price-theme);
-  font-size: 1rem;
+  font-size: 0.9rem;
   text-transform: uppercase;
   text-align: center;
+  margin-top: 10px;
+  letter-spacing: 0.1rem;
+}
+.card__benefit-icon {
+  width: 15px;
+  height: 15px;
+  padding: 0 2px;
+  border-radius: 50%;
+  background-color: var(--price-theme);
 }
 
 .center-vertical {
