Continued building project

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
-.flex {
+/* .flex {
   display: flex;
-}
+} */
 
 .center {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.center-horizontal {
+  display: flex;
   align-items: center;
 }
 
