--- a/src/assets/components/PricingCard/PricingCard.module.css
+++ b/src/assets/components/PricingCard/PricingCard.module.css
@@ -4,12 +4,12 @@
   border: 1px solid black;
   border-radius: 5px;
   --price-theme: #f2746dff;
+  --price-theme-darker: #d43533;
 }
 
 .card__wrapper {
   width: 90%;
   margin: 0 auto;
-  padding: 40px;
   padding: 20px 10px;
 }
 
@@ -33,12 +33,19 @@
   font-family: Poppins;
   padding-bottom: 10px;
   border-bottom: 2px solid #f3f1f1;
+  width: 100%;
 }
 
-.card__benefits {
-  color: black;
-  padding-left: 20px;
-  font-size: 0.7rem;
+.card__price-amount {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: var(--price-theme);
+}
+
+.card__price-duration {
+  font-size: 0.8rem;
+  color: var(--price-theme);
+  margin-left: 4px;
 }
 
 .card__benefits-label {
@@ -46,14 +53,22 @@
   font-size: 0.9rem;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 10px;
-  letter-spacing: 0.1rem;
+  margin-top: 20px;
+  letter-spacing: 1.5px;
 }
+
+.card__benefits {
+  color: black;
+  padding-left: 10px;
+  font-size: 0.7rem;
+  margin-bottom: 15px;
+}
+
 .card__benefit-icon {
   width: 12px;
   height: 12px;
   padding: 2px;
-  margin-right: 2px;
+  margin-right: 10px;
   border-radius: 50%;
   background-color: color-mix(in srgb, var(--price-theme), white 20%);
 }
@@ -62,4 +77,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.card__button {
+  width: 100%;
+  padding: 15px;
+  border-radius: 3px;
+  background-color: var(--price-theme);
+  color: white;
+  text-transform: uppercase;
+  border: 2px solid var(--price-theme-darker);
+  margin-top: 20px;
 }
